# TensorRT_Demo

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.072b0e3  CMakeLists.txt.user.ecf7f57  dadialog.cpp  dadialog.h  daorganizeddialog.cpp  daorganizeddialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ni_ai_ao_do.cpp  ni_ai_ao_do.h  opengltestone.cpp  opengltestone.h  painttestone.cpp  painttestone.h  playercontrols.cpp  scenemodifier.cpp  scenemodifier.h  tensorrt_module.cpp  tensorrt_module.h  testoneform.cpp  testoneform.h  testoneform.ui  testoneuserform.cpp  testoneuserform.h  trainingdialog.cpp  trainingdialog.h  trainingdialog.ui  trainingform.cpp  trainingform.h  trainingform.ui  traininguserform.cpp  traininguserform.h  traininguserform.ui  unlabeleddaqform.cpp  unlabeleddaqform.h  unlabeleddaqform.ui  (+3 more)
3D model/: Hand.mix  Lower_arm.mix  Phalange_index_2.mix  Phalange_index_3.mix  Phalange_little_1.mix  Phalange_little_2.mix  Phalange_little_3.mix  Phalange_middle_1.mix  Phalange_middle_2.mix  Phalange_ring_1.mix  Phalange_thumb_1.mix  Phalange_thumb_2.mix  Trunk.mix  Upper_arm.mix
Figures/: Figures.pptx
MATLAB/: Check_pseudo_label.m  Class_8_to_6.m  Plot_data_check.m  Plot_data_speed.m  Training_Data_Processing.asv  Training_Data_Processing.m
MATLAB/Dataset/: Dataset_sbj1_labeled.mat
Python/: PB_Generator.ipynb  Readme.txt  UFF_Converter.ipynb
Python/.ipynb_checkpoints/: PB_Generator-checkpoint.ipynb
